Updates to GitHub page

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="https://code.jquery.com/jquery-1.12.3.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>	
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
 
 <body>
@@ -20,12 +20,12 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="#">RDD</a>
+      <a class="navbar-brand" href="#"><img src="images/logo/logo_sm.gif" alt="Ronesha D. Dennis logo" class="img_responsive"></a>
     </div>
 
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">     
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">About Me</a></li>
+        <li><a href="#about">About Me</a></li>
         <li><a href="#">Portfolio</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
@@ -36,19 +36,17 @@
 <!-- Introductory Div -->
 <div class="jumbotron">
   <div class="container-fluid">
-  	<img src="https://pbs.twimg.com/profile_images/531174943606976513/6c9coE8J.jpeg" alt="..." class="img-circle img-responsive">
+  	<img src="images/ronesha.jpeg" alt="Web Developer Ronesha D. Dennis" class="img-circle img-responsive center-block">
 	<h1 id="title">Ronesha D. Dennis</h1>
 	<h2> Web Developer and Non-Profit Programming Professional </h2>
   </div>
 </div>
 
-<div class="jumbotron" id="about">
-  <div class="container-fluid">
-  <div class="col-xs-12 text-center"></div>
+<div class="container-fluid" id="about">
+  <div class="col-xs-12 text-center">
 	<p><strong>Ronesha D. Dennis</strong> is a graduate of Howard University's John H. Johnson School of Communications. She holds a degree in Journalism with a minor in Computer Science. Shortly after graduating, Ronesha discovered that being a journalist would not fulfill her need to help others, and instead, spent five years working at The National Campaign to Prevent Teen and Unplanned Pregnancy, with the latter half of her time at the nonprofit spent developing relationships with respected organizations in the African-American community. Though Ronesha felt her work was purposeful, her passion for programming and web development, which had been an interest since well before entering college, could not be satiated. She entered Tech Talent South's Web Development Immersive bootcamp in April 2016, and has been expanding her technological skills since.</p>
   </div>
   </div>
-</div>
 
 <footer>
 	<a href="http://www.linkedin.com/in/roneshaddennis" target="_blank">LinkedIn</a> | <a href="http://www.twitter.com/roneshaddennis" target="_blank">Twitter</a>
