Adds Good Coffee

--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
     </div> <!-- Close row -->
   </div> <!-- close container -->
 
-  <div id= "scroll_me">
+<!--   <div id= "scroll_me">
     <i class="fa fa-angle-double-down fa-lg" aria-hidden="true"></i>
     <p class="muted">Scroll down</p>
-  </div>
+  </div> -->
 
   <!-- Projects -->
   <div class="container-fluid web-content" id="portfolio">
@@ -74,7 +74,7 @@
           <a href="http://mytaskerapp.herokuapp.com" target="_blank"><img src="images/tasker.png" alt="Tasker" class="img-responsive"><span class="text-content"><span>Tasker</span></span></a>
         </li>
         <li>
-          <a href="http://atlbusfinder.herokuapp.com" target="_blank"><img src="images/placeholder.png" alt="Atlanta Bus Finder" class="img-responsive"><span class="text-content"><span>Atlanta Bus Finder</span></span></a>
+          <a href="#" target="_blank"><img src="images/placeholder.png" alt="Placeholder" class="img-responsive"><span class="text-content"><span>Placeholder</span></span></a>
         </li>
       </ul>
     </div>
@@ -82,17 +82,17 @@
   <div class="container-fluid web-content">
     <h2>Front End Design</h2>
     <h4>HTML, CSS, JQuery</h4>
-    <div class="row">
-      <div class="col-sm-4">
-        <img src="images/placeholder.png">
-      </div>
-      <div class="col-sm-4">
-        <img src="images/placeholder.png">
-      </div>
-      <div class="col-sm-4">
-        <img src="images/placeholder.png">
-      </div>
-    </div>
+    <ul class = "img-list">
+      <li>
+        <a href="http://rddennis.github.io/Good-Coffee" target="_blank"><img src="images/goodcoffee.png" alt="Good Coffee" class="img-responsive"><span class="text-content"><span>Good Coffee</span></span></a>
+      </li>
+      <li>
+        <a href="#" target="_blank"><img src="images/placeholder.png" alt="Placeholder" class="img-responsive"><span class="text-content"><span>Placeholder</span></span></a>
+      </li>
+      <li>
+        <a href="#" target="_blank"><img src="images/placeholder.png" alt="Placeholder" class="img-responsive"><span class="text-content"><span>Placeholder</span></span></a>
+      </li>
+    </ul>
   </div>
 
 </div>
