updates links to current projects

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <h4>Curls</h4>
       <p>Curls** is a private client project.</p>
       <h4>Safe Spaces</h4>
-      <p>See the work in progress on Github.</p>
+      <p><a href="https://github.com/rddennis/safe-spaces" target="_blank">See the work in progress on Github.</a></p>
     </div>
     <div class="collabs">
       <h3>Collaborations</h3>
