--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link href='https://fonts.googleapis.com/css?family=Great+Vibes' rel='stylesheet' type='text/css'>
   <link href="https://fonts.googleapis.com/css?family=Handlee" rel="stylesheet">
   <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src="https://code.jquery.com/jquery-1.12.3.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
@@ -16,7 +17,7 @@
 
 <div class="container-fluid">
   
-  <div class="about-me">
+  <div class="about-me col-sm-12">
     <div class="one">
       <img src="images/ronesha2.jpg" style='height: 100vh; object-fit: contain;'>
       </div>
@@ -29,8 +30,8 @@
     
   </div>
 
-  <div class="my-work">
-  <div class="portfolio">
+  <div class="my-work col-sm-12">
+  <div class="portfolio col-sm-12">
     <div class="completed">
       <h3>Completed Projects</h3>
       <h4>Atlanta Bus Finder</h4>
@@ -52,7 +53,7 @@
     
   </div>
 
-  <div class="web-one blackout">
+  <div class="web-one col-sm-12">
     <div class="center-content">
       <div class="content">
         <h2>StateLess</h2>
@@ -70,7 +71,7 @@
     </div>
   </div>
 
-  <div class="web-two blackout">
+  <div class="web-two col-sm-12">
     <div class="center-content">
       <div class="content">
         <h2>Atlanta Bus Finder</h2>
@@ -86,7 +87,7 @@
     </div>
   </div>
 
-  <div class="web-three blackout">
+  <div class="web-three col-sm-12">
     <div class="center-content">
       <div class="content">
         <h2>Tasker</h2>
@@ -103,7 +104,7 @@
     </div>
   </div>
 
-  <div class="web-four blackout">
+  <div class="web-four col-sm-12">
     <div class="center-content">
       <div class="content">
         <h2>Good Coffee</h2>
@@ -119,7 +120,7 @@
     </div>
   </div>
 
-  <div class="contact">
+  <div class="contact col-sm-12">
     <div class="center-content">
     <div class="content">
     <h2>Contact Me</h2>
