makes updates to form, etc.

--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
         <label>Message</label><br>
         <textarea name="message" id="message"></textarea>
         <br><br>
+        <input type="hidden" name="_next" value="https://rddennis.github.io" />
         <button type="submit">Send</button>
       <br><br>
       </form>
