makes updates to form for thank you redirect.

--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <label>Message</label><br>
         <textarea name="message" id="message"></textarea>
         <br><br>
-        <input type="hidden" name="_next" value="https://rddennis.github.io" />
+        <input type="hidden" name="_next" value="https://rddennis.github.io/thankyou.html" />
         <button type="submit">Send</button>
       <br><br>
       </form>
