updates margin for mobile responsiveness.

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <h2>StateLess</h2>
         <h4><em>StateLess</em> is a web application that allows state and regional leaders to utilize SMS messaging to reach volunteers during political canvassing.</h4>
         <h5>This project was completed in collaboration with fellow Code for Progress Fellows. <br /> 
-        My role included the creation of the user authentication system with the usage of Flask Security.</h5>
+        My role included the creation of the user authentication system with the usage of Flask Security, as well as the functionality of individual user roles and responsibilities in the web application.</h5>
         <h4><strong>
           <img src='images/python.png' width="50vh" vertical-align="middle">
           <img src='images/html5.png' width="50vh" vertical-align="middle">
