adds jquery to tasker app

--- a/index.html
+++ b/index.html
@@ -95,7 +95,8 @@
         <h4><strong>
           <img src='images/ror.png' width="50vh" vertical-align="middle">
           <img src='images/html5.png' width="50vh" vertical-align="middle">
-          <img src='images/css3.png' width="50vh" vertical-align="middle"></strong>
+          <img src='images/css3.png' width="50vh" vertical-align="middle">
+          <img src='images/jquery.png' width="50vh" vertical-align="middle"></strong>
         </h4>
         <h4><a href="https://github.com/rddennis/taskerapp" target="_blank"><button type="button">See the Code</button> </a>
         <a href="http://mytaskerapp.herokuapp.com" target="_blank"><button type="button">Visit the Website</button></a>
