adds required fields to contact messages

--- a/index.html
+++ b/index.html
@@ -126,14 +126,13 @@
     <div class="content">
     <h2>Contact Me</h2>
     <br>
-      <form action="https://formspree.io/ronesha_dennis@yahoo.com"
-        method="POST">
+      <form action="https://formspree.io/ronesha_dennis@yahoo.com" method="POST">
         <label>Email Address</label><br>
-        <input type="email" name="_replyto" id="email">
+        <input type="email" name="_replyto" id="email" required>
         <br><br>
         <input type="hidden" name="_subject" value="New Email from rddennis.github.io">
         <label>Message</label><br>
-        <textarea name="message" id="message"></textarea>
+        <textarea name="message" id="message" required></textarea>
         <br><br>
         <input type="hidden" name="_next" value="https://rddennis.github.io/thankyou.html" />
         <button type="submit">Send</button>
