updated link for NA

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
           <img src='images/d3.png' width="55vh" vertical-align="middle">
           </strong>
         </h4>
-        <h4><a href="https://github.com/CodeForProgress/sms-app" target="_blank"><button type="button">See the Code</button></a> 
-        <a href="http://www.stateless.cc" target="_blank"><button type="button">Visit the Website</button></a></h4>
+        <h4><a href="https://github.com/newamericafoundation/2016-annual-report" target="_blank"><button type="button">See the Code</button></a> 
+        <a href="http://2016.newamerica.org" target="_blank"><button type="button">Visit the Website</button></a></h4>
       </div> 
     </div>
     <div class="left-arrow"><i class="fa fa-3x fa-angle-left" aria-hidden="true"></i></div>
